# word_map

./: Cargo.toml  README.md  todo.md
examples/blueprint/: Cargo.toml
examples/blueprint/src/: main.rs
examples/generator/: Cargo.toml  README.md  index.html  output.css  styles.css  tailwind.config.js
examples/generator/src/: app.rs  app_state.rs  color_map.rs  main.rs
examples/generator/src-tauri/: Cargo.toml  tauri.conf.json
examples/generator/src-tauri/src/: main.rs
examples/generator/src/components/: gradient_bar.rs  mod.rs  scale_bar.rs  side_controls.rs
examples/n_words/: Cargo.toml
examples/n_words/src/: main.rs
examples/radial/: Cargo.toml
examples/radial/src/: main.rs
lib/: Cargo.toml
lib/src/: block.rs  grid.rs  lib.rs
src/: block.rs  grid.rs  main.rs
