[workspace]
resolver = "2"
members = [
  "./lib",
  "./examples/n_words"
]

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics", "Mathematics"]
edition = "2021"
keywords = ["diagram", "graphics"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo"
version = "2.0.12"
# Version 1.65 is required as this package makes use of "Generic Associated Types".
rust-version = "1.65"
