[workspace]
resolver = "2"
members = [
  "./lib",
  "./examples/blueprint",
  "./examples/radial"
]

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics"]
edition = "2021"
keywords = ["diagram", "graphics"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/word_map"
version = "2.0.12"
rust-version = "1.65"
