[package]
name = "word_map"
authors = { workspace = true }
# categories = ["graphics"]
description = "A library for creating images based on (word, weight pairs)."
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
rand = "0.8.5"

[lib]
crate-type = ["cdylib", "rlib"]
