[package]
name = "word_map"
authors = { workspace = true }
# categories = ["graphics"]
description = "A library for creating images based on (word, weight pairs)."
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
categories = ["graphics"]
keywords = ["graphics"]

[dependencies]
rand = "0.8.5"
nom = "7"
serde = { version = "1.0", features = ["derive"] }
leptos = "0.6"

[lib]
crate-type = ["cdylib", "rlib"]
