[package]
name = "blueprint"
authors = { workspace = true }
categories = { workspace = true }
description = "A example app from the word_map crate. word/weight pairs selected a random."
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
rand = "0.8.5"
random_word = { version = "0.4.3", features = ["en"] }
word_map = { path = "../../lib" }
