[package]
name = "generator-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.7"
colorous = "~1.0"
leptos = { version = "0.6", features = ["csr"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
word_map = { path="../../lib" }
serde_json = "1.0.120"
rand = "0.8.5"
random_word = { version = "0.4.3", features = ["en"] }
[workspace]
members = ["src-tauri"]
